# miniflex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: miniflexConfig.cmake.in
include/miniflex/: miniflex.h
src/: miniflex.c
test/: test_miniflex.c
test/conformance/: README.md  miniflex_cases.c  run_conformance.py
test/install_smoke/: CMakeLists.txt  main.c  run_install_smoke.cmake.in
